snippets/Nemerle.Statechart/Tests/testsuite/negative/event_class_event_not_found.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;


  variant Events
  {
    | A
    | B
  }

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  name "event class event not found error";
  
  event_class Events(d); // E: Event "d" not found in event class "Events"
  
  #>)]
  public class example2
  {
  }

